2003-08-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi-mytown.el: New file.

2003-08-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-hist.el (w3m-history-previous-position): New macro.
	(w3m-history-next-position): New macro.
	(w3m-history-forward-1): Simplified using new macro(s).
	(w3m-history-backward-1): Ditto.
	(w3m-history-regenerate-pointers): Ditto.
	(w3m-history-assoc): Ditto.
	(w3m-history-current-1): Don't use old-fashioned backquotes.
	(w3m-history-save-position): Ditto.
	(w3m-history-modify-properties): Ditto.
	(w3m-history-with-element): Ditto.

2003-08-10  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-namazu.el (w3m-about-namazu): Fixed problem when further links
	contain "&amp;".

	* shimbun/sb-japantimes.el (shimbun-japantimes-coding-system): Removed.

2003-08-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-hist.el (w3m-history-reuse-history-elements): New user
	option.
	(w3m-history-forward): Return a cons of a new history element and
	new position pointers of a history.
	(w3m-history-backward): Ditto.
	(w3m-history-regenerate-pointers): New function.
	(w3m-history-push): If `w3m-history-reuse-history-elements' is nil,
	sprout a new history branch even if history elements for the same
	url already exist.
	(w3m-history-add-arrived-db): Abolish the optional argument; bind
	`w3m-history-reuse-history-elements' to t.

	* w3m.el (w3m-view-previous-page): Assume `w3m-history-backward'
	returns cons data; bind `w3m-history-reuse-history-elements' to t;
	fix position pointers of a history after visiting a page.
	(w3m-goto-url): Fix position pointers of a history when a page is
	referred to by the about://history/ page.
	(w3m-about-history): Include position pointers in an html form.
	(w3m-history-highlight-current-url): Make history position data
	invisible.

2003-08-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Fix last change.

2003-08-06  Katsumi Yamaoka  <yamaoka@jpl.org>
